--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,9 @@
 ---
 layout: default
 ---
-{% include JB/setup %}
-{% include themes/twitter/post.html %}
+<br/><br/>
+<time>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</time>
+<h1>{{ page.title }}</h1>
+</br>
+
+{{ content }}
