--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,7 +31,7 @@
 
 
 
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.url }}">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
 </head> 
 
