--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -28,10 +28,18 @@ img.halfsize {
   width: 60%;
 }
 
-.footer-col-6 {
-  width: -webkit-calc(60% - (30px / 2));
-  width: calc(60% - (30px / 2));
+@media (min-width: 600px) {
+  .footer-col-6 {
+    width: -webkit-calc(60% - (30px / 2));
+    width: calc(60% - (30px / 2));
+  }
 }
+@media (max-width: 600px) {
+  .footer-col-6 {
+    width: 100%;
+  };
+}
+
 
 p.post-thumbnail-title {
   text-align: center;
