Add link to carousel

--- a/_includes/carousel-item.html
+++ b/_includes/carousel-item.html
@@ -21,7 +21,7 @@
 <div class="item {{_active}}">
   <img class="first-slide carousel-slide" src="{{_image}}" alt="{{ _title }}">
   <div class="carousel-caption-custom">
-    <span class="carousel-title">{{ _title }}</span >:&nbsp;<time>[{{_date}}]</time>
+    <time>{{_date}}</time><br/><span class="carousel-title"><a href="post.url">{{ _title }}</a></span>
     <div class="carousel-description">{{ _description }}</div> 
   </div>
 </div>
