Center flickr images

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -156,3 +156,9 @@ img#about-photo {
     float: right;
     margin: 0 5px 20px;
   }
+
+a.flickr img {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
