--- a/_includes/icon-email.html
+++ b/_includes/icon-email.html
@@ -1,1 +1,1 @@
-<a href="#"><span class="icon icon--email">{% include icon-email.svg %}</span><span class="username">{{ include.username | replace: '@', '(at)' }}</span></a>
+<span><span class="icon icon--email">{% include icon-email.svg %}</span><span class="username">{{ include.username | replace: '@', '(at)' | replace: '.', '(dot)' }}</span></span>
