--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
       </div>
 
       <div class="footer-col footer-col-6">
-        <p>{{ site.description }}</p>
+        <p class="footer-center">{{ site.description }}</p>
       </div>
 
       <div class="footer-col footer-col-2">
@@ -32,5 +32,4 @@
 
     </div>
   </div>
-
 </footer>
